Fixed an issue with signed division.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,6 @@
-all: adder hello_world name multiplier compare mult_table strtest
+all: adder hello_world name multiplier compare also
+
+also: mult_table strtest compute
 
 adder: adder.bc
 	../bcc adder.s < adder.bc > /dev/null
@@ -21,6 +23,9 @@ mult_table: mult_table.bc
 strtest: strtest.bc
 	../bcc strtest.s < strtest.bc > /dev/null
 
+compute: compute.bc
+	../bcc compute.s < compute.bc > /dev/null
+
 clean:
 	rm -f *.s adder hello_world name multiplier compare mult_table
-	rm -f strtest
+	rm -f strtest compute
