Made expression-dependent if statements work! Expression-dependent loops are not far behind. Also, there's an issue with mult_table.bc somewhere. The compiler yells at you, but it generates, as far as I can tell, working code. Strange.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -28,4 +28,4 @@ compute: compute.bc
 
 clean:
 	rm -f *.s adder hello_world name multiplier compare mult_table
-	rm -f strtest compute
+	rm -f strtest compute *~
