Ok. So, now we print the line a syntax error occurs. That's pretty nice. Moreover, the error was in compare.bc, not mult_table.bc. Oops. It's fixed, regardless. I suppose we should have some test cases or something. That might be a good idea. Finally, the Makefile in examples now makes the compiler, because two cases of not finding ../bcc were reported. This should fix that.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,7 @@
-all: adder hello_world name multiplier compare also
+all: compiler adder hello_world name multiplier compare also
+
+compiler:
+	cd ../ && make && cd examples
 
 also: mult_table strtest compute strlen
 
