--- a/examples/Makefile
+++ b/examples/Makefile
@@ -3,7 +3,7 @@ all: compiler adder hello_world name multiplier compare also
 compiler:
 	cd ../ && make && cd examples
 
-also: mult_table strtest compute strlen
+also: mult_table strtest compute strlen hello_bcc
 
 adder: adder.bc
 	../bcc adder.s < adder.bc > /dev/null
@@ -32,6 +32,13 @@ compute: compute.bc
 strlen: strlen.bc
 	../bcc strlen.s < strlen.bc > /dev/null
 
+hello_c.o: hello_c.bc
+	../bcc hello_c.s < hello_c.bc > /dev/null
+
+hello_bcc: hello_c.o hello_bcc.c
+	gcc hello_bcc.c hello_c.o -o hello_bcc
+
 clean:
-	rm -f *.s *~ adder hello_world name multiplier compare
-	rm -f strtest compute strlen mult_table
+	rm -f *.s *.o *~ adder hello_world name multiplier
+	rm -f strtest compute strlen mult_table compare
+	rm -f hello_bcc
