Install the linter.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: cpp
 compiler: gcc
 dist: trusty
 
+install:
+  # Get the linter
+  - apt-get install uncrustify
+
 script:
   - make -j$(nproc)
   - test/lint/run-linter.bash
