--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,19 @@
 language: cpp
 compiler: gcc
 dist: trusty
+sudo: required
 
 install:
   # Get the linter
-  - sudo apt-get install uncrustify
+  - wget http://allen-software.com/uncrustify.tar.gz
+  - mkdir uncrustify
+  - cd uncrustify
+  - tar -xf ../uncrustify.tar.gz
+  - mkdir build && cd build
+  - cmake .. -CMAKE_INSTALL_PREFIX=/usr
+  - make -j$(nproc);
+  - sudo make install
+  - cd ../../ && rm -rf uncrustify
 
 script:
   - make -j$(nproc)
