Print uncrustify version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 
 script:
   - make -j$(nproc)
+  - uncrustify --version
   - test/lint/run-linter.bash
   - cd test/scanner
   - ./testall.sh
