--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 compiler: gcc
 dist: trusty
+sudo: required
 
 install:
   # Get the linter
@@ -8,6 +9,7 @@ install:
 
 script:
   - make -j$(nproc)
+  - uncrustify --version
   - test/lint/run-linter.bash
   - cd test/scanner
   - ./testall.sh
